--- a/index.html
+++ b/index.html
@@ -68,6 +68,30 @@
 		<div class="window unsplash">
 			
 		</div>
+
+		<div class="window textBox">
+			<div class="windowTop"></div>
+			<div class="textContainer">
+				<div class="textLeft">
+					1:<br>
+					2:<br>
+					3:<br>
+					4:<br>
+					5:<br>
+					6:<br>
+					7:<br>
+				</div>
+				<div class="textRight">
+					Be right back!<br>
+					<br>
+					Tell your friends to tune in at<br>
+					VideoGamesAreAwful.com<br>
+					<br>
+					Also, follow me on Twitter<br>
+					@mikeHEARTu
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 
