finished main screen

--- a/index.html
+++ b/index.html
@@ -53,10 +53,16 @@
 	<div id="streamCanvas">
 		<div id="topBar">
 			<div class="topBarBlock">
-				mikeOS.v5
+				img/unsplash.png
 			</div>
 			<div class="topBarBlock">
-				img/unsplash.png
+				doc/update.txt
+			</div>
+			<div class="topBarBlock">
+				img/humble.png
+			</div>
+			<div class="topBarBlock">
+				vid/nowplaying.mp4
 			</div>
 			<div class="topBarBlock">
 				<span id="timeHours"></span>
@@ -65,9 +71,7 @@
 			</div>
 		</div>
 
-		<div class="window unsplash">
-			
-		</div>
+		<div class="window unsplash"></div>
 
 		<div class="window textBox">
 			<div class="windowTop"></div>
@@ -92,6 +96,13 @@
 				</div>
 			</div>
 		</div>
+
+		<video autoplay muted loop width="720" class="window" id="nowPlayingVideo">
+			<!-- <source src="img/steambirds-alliance-gameplay.mp4" type="video/mp4"> -->
+			<source src="img/brokchrd.webm" type="video/webm">
+		</video>
+
+		<div class="window humble"></div>
 	</div>
 </body>
 
