added login pages

--- a/login.html
+++ b/login.html
@@ -68,11 +68,11 @@
 					<div class="userName">aznmike123</div>
 				</div>
 				<div class="userPassword">
-					********
+					********<span class="cursorBlink">|</span>
 				</div>
 				<div class="loginButtonContainer">
 					<div class="loginButton">
-						start stream >>
+						Start stream >>
 					</div>
 				</div>
 			</div>
