--- a/offline.html
+++ b/offline.html
@@ -68,7 +68,7 @@
 					<div class="userName">aznmike123</div>
 				</div>
 				<div class="userPassword">
-					********<span class="cursorBlink">|</span>
+					<span class="cursorBlink">|</span>
 				</div>
 				<div class="loginButtonContainer">
 					<div class="loginButton">
