added camel casing

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				img/humble.png
 			</div>
 			<div class="topBarBlock">
-				vid/nowplaying.mp4
+				vid/nowPlaying.mp4
 			</div>
 			<div class="topBarBlock">
 				<span id="timeHours"></span>
