--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<div class="textRight">
 					Be right back!<br>
 					<br>
-					I'm playing Borderlands 3 on PC.<br>
+					I'm playing Modern Warfare on PS4.<br>
 					<br>
 					Tell your friends to tune in at<br>
 					VideoGamesAreAwful.com<br>
@@ -102,7 +102,7 @@
 		</div>
 
 		<video autoplay muted loop width="720" class="window" id="nowPlayingVideo">
-			<source src="img/borderlands-3-gameplay.mp4" type="video/mp4">
+			<source src="img/modern-warfare-gameplay.mp4" type="video/mp4">
 			<!-- <source src="img/brokchrd.webm" type="video/webm">	 -->
 		</video>
 
