--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 		</div>
 
 		<video autoplay muted loop width="720" class="window" id="nowPlayingVideo">
-			<!-- <source src="img/modern-warfare-gameplay.mp4" type="video/mp4"> -->
-			<source src="img/brokchrd.webm" type="video/webm">	
+			<source src="img/wreckfest-gameplay.mp4" type="video/mp4">
+			<!-- <source src="img/brokchrd.webm" type="video/webm">	 -->
 		</video>
 
 		<div class="window humble"></div>
