--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<div class="textRight">
 					Be right back!<br>
 					<br>
-					I'm playing Sojourn on PS4<br>
+					I'm playing Wreckfest on PS4<br>
 					with a code provided by the developer.<br>
 					<br>
 					Tell your friends to tune in at<br>
@@ -103,7 +103,7 @@
 		</div>
 
 		<video autoplay muted loop width="720" class="window" id="nowPlayingVideo">
-			<source src="img/sojourn-gameplay.mp4" type="video/mp4">
+			<source src="img/wreckefest-gameplay.mp4" type="video/mp4">
 			<!-- <source src="img/brokchrd.webm" type="video/webm">	 -->
 		</video>
 
