--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 			</div>
 		</div>
 
-		<div class="window unsplash"></div>
+		<!-- <div class="window unsplash"></div> -->
+		<img src="https://source.unsplash.com/featured/?fun" class="unsplash window" width="480">
 
 		<div class="window textBox">
 			<div class="windowTop"></div>
@@ -90,8 +91,7 @@
 				<div class="textRight">
 					Be right back!<br>
 					<br>
-					I'm playing Wreckfest on PS4<br>
-					with a code provided by the developer.<br>
+					I'm making music or whatever<br>
 					<br>
 					Tell your friends to tune in at<br>
 					VideoGamesAreAwful.com<br>
@@ -103,8 +103,8 @@
 		</div>
 
 		<video autoplay muted loop width="720" class="window" id="nowPlayingVideo">
-			<source src="img/wreckefest-gameplay.mp4" type="video/mp4">
-			<!-- <source src="img/brokchrd.webm" type="video/webm">	 -->
+			<!-- <source src="img/wreckefest-gameplay.mp4" type="video/mp4"> -->
+			<source src="img/brokchrd.webm" type="video/webm">	
 		</video>
 
 		<div class="window humble"></div>
