updated for children of morta

--- a/index.html
+++ b/index.html
@@ -86,12 +86,13 @@
 					7:<br>
 					8:<br>
 					9:<br>
-					<!-- 10:<br> -->
+					10:<br>
 				</div>
 				<div class="textRight">
 					Be right back!<br>
 					<br>
-					I'm making music or whatever<br>
+					I'm playing Children of Morta<br>
+					with a code provided by the developer.<br>
 					<br>
 					Tell your friends to tune in at<br>
 					VideoGamesAreAwful.com<br>
