--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="textRight">
 					Be right back!<br>
 					<br>
-					I'm playing Where the Bees make Honey<br>
+					I'm playing Stranded Sails<br>
 					with a code provided by the developer.<br>
 					<br>
 					Tell your friends to tune in at<br>
