--- a/index.html
+++ b/index.html
@@ -86,12 +86,13 @@
 					7:<br>
 					8:<br>
 					9:<br>
-					<!-- 10:<br> -->
+					10:<br>
 				</div>
 				<div class="textRight">
 					Be right back!<br>
 					<br>
-					I'm playing Mario Maker 2.<br>
+					I'm playing Little Big Workshop<br>
+					with a code provided by the developer.<br>
 					<br>
 					Tell your friends to tune in at<br>
 					VideoGamesAreAwful.com<br>
@@ -103,8 +104,8 @@
 		</div>
 
 		<video autoplay muted loop width="720" class="window" id="nowPlayingVideo">
-			<source src="img/mario-maker-2-gameplay.mp4" type="video/mp4">
-			<!-- <source src="img/brokchrd.webm" type="video/webm">	 -->
+			<!-- <source src="img/mario-maker-2-gameplay.mp4" type="video/mp4"> -->
+			<source src="img/brokchrd.webm" type="video/webm">	
 		</video>
 
 		<div class="window humble"></div>
