--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
 				<div class="textRight">
 					Be right back!<br>
 					<br>
-					I'm playing Walking Zombies 2<br>
-					with a code provided by the developer.<br>
+					I'm playing Forza Horizon 4.<br>
 					<br>
 					Tell your friends to tune in at<br>
 					VideoGamesAreAwful.com<br>
