--- a/index.html
+++ b/index.html
@@ -86,12 +86,13 @@
 					7:<br>
 					8:<br>
 					9:<br>
-					<!-- 10:<br> -->
+					10:<br>
 				</div>
 				<div class="textRight">
 					Be right back!<br>
 					<br>
-					I'm playing Outer Worlds.<br>
+					I'm playing Final Fantasy XIV.<br>
+					Deviant Art on Ultros.<br>
 					<br>
 					Tell your friends to tune in at<br>
 					VideoGamesAreAwful.com<br>
@@ -103,7 +104,7 @@
 		</div>
 
 		<video autoplay muted loop width="720" class="window" id="nowPlayingVideo">
-			<source src="img/outer-worlds-gameplay.mp4" type="video/mp4">
+			<source src="img/ffxiv-gameplay.mp4" type="video/mp4">
 			<!-- <source src="img/brokchrd.webm" type="video/webm">	 -->
 		</video>
 
