--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@
 					7:<br>
 					8:<br>
 					9:<br>
-					10:<br>
+					<!-- 10:<br> -->
 				</div>
 				<div class="textRight">
 					Be right back!<br>
 					<br>
-					I'm playing Final Fantasy XIV.<br>
-					Deviant Art on Ultros.<br>
+					I'm playing Need for Speed Heat.<br>
 					<br>
 					Tell your friends to tune in at<br>
 					VideoGamesAreAwful.com<br>
@@ -104,8 +103,8 @@
 		</div>
 
 		<video autoplay muted loop width="720" class="window" id="nowPlayingVideo">
-			<source src="img/ffxiv-gameplay.mp4" type="video/mp4">
-			<!-- <source src="img/brokchrd.webm" type="video/webm">	 -->
+			<!-- <source src="img/ffxiv-gameplay.mp4" type="video/mp4"> -->
+			<source src="img/brokchrd.webm" type="video/webm">	
 		</video>
 
 		<div class="window humble"></div>
