--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="textRight">
 					Be right back!<br>
 					<br>
-					I'm playing Sparklite with a<br>
+					I'm playing Superliminal with a<br>
 					code provided by the developer.<br>
 					<br>
 					Tell your friends to tune in at<br>
