--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="textRight">
 					Be right back!<br>
 					<br>
-					I'm playing Beautiful Bricks with<br>
+					I'm playing Don't Die, Minerva! with<br>
 					a code provided by the developer.<br>
 					<br>
 					Tell your friends to tune in at<br>
