--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 				<div class="textRight">
 					Be right back!<br>
 					<br>
-					I'm playing Don't Die, Minerva! with<br>
-					a code provided by the developer.<br>
+					I'm playing Final Fantasy XIV.<br>
+					Deviant Art on Ultros.<br>
 					<br>
 					Tell your friends to tune in at<br>
 					VideoGamesAreAwful.com<br>
