--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@
 					7:<br>
 					8:<br>
 					9:<br>
-					10:<br>
+					<!-- 10:<br> -->
 				</div>
 				<div class="textRight">
 					Be right back!<br>
 					<br>
-					I'm playing Final Fantasy XIV.<br>
-					Deviant Art on Ultros.<br>
+					I'm playing Fallout 3.<br>
 					<br>
 					Tell your friends to tune in at<br>
 					VideoGamesAreAwful.com<br>
