--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="textRight">
 					Be right back!<br>
 					<br>
-					I'm playing Fallout 3.<br>
+					I'm playing Fallout New Vegas.<br>
 					<br>
 					Tell your friends to tune in at<br>
 					VideoGamesAreAwful.com<br>
