--- a/index.html
+++ b/index.html
@@ -101,11 +101,20 @@
 				</div>
 			</div>
 		</div>
-
-		<video autoplay muted loop width="720" class="window" id="nowPlayingVideo">
-			<!-- <source src="img/ffxiv-gameplay.mp4" type="video/mp4"> -->
-			<source src="img/brokchrd.webm" type="video/webm">	
-		</video>
+		
+		<iframe 
+			class="window" 
+			id="nowPlayingVideo" 
+			src="https://clips.twitch.tv/embed?clip=RamshackleUnsightlyLampPunchTrees" 
+			frameborder="0" 
+			height="405" 
+			width="720">
+		</iframe>
+		
+		<!-- <video autoplay muted loop width="720" class="window" id="nowPlayingVideo">
+			<source src="img/ffxiv-gameplay.mp4" type="video/mp4">
+			<source src="img/brokchrd.webm" type="video/webm">				
+		</video> -->
 
 		<div class="window humble"></div>
 	</div>
