--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		<iframe 
 			class="window" 
 			id="nowPlayingVideo" 
-			src="https://clips.twitch.tv/embed?clip=RamshackleUnsightlyLampPunchTrees" 
+			src="https://clips.twitch.tv/embed?muted=true&clip=RamshackleUnsightlyLampPunchTrees" 
 			frameborder="0" 
 			height="405" 
 			width="720">
