--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<iframe 
 			class="window" 
 			id="nowPlayingVideo" 
-			src="https://clips.twitch.tv/embed?muted=true&clip=RamshackleUnsightlyLampPunchTrees" 
+			src="https://player.twitch.tv/?autoplay=true&muted=true&time=11m&video=v516587920" 
 			frameborder="0" 
 			height="405" 
 			width="720">
