--- a/index.html
+++ b/index.html
@@ -103,12 +103,14 @@
 		</div>
 
 		<iframe 
-			class="window" 
-			id="nowPlayingVideo" 
-			src="https://player.twitch.tv/?autoplay=true&muted=true&time=11m&video=v516587920" 
-			frameborder="0" 
+			class="window"
+			id="nowPlayingVideo"
+			width="720" 
 			height="405" 
-			width="720">
+			src="https://www.youtube.com/embed/qYY2CUxzgE4?controls=0&autoplay=1&muted=1" 
+			frameborder="0" 
+			allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+			allowfullscreen>
 		</iframe>
 		
 		<!-- <video autoplay muted loop width="720" class="window" id="nowPlayingVideo">
