--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			id="nowPlayingVideo"
 			width="720" 
 			height="405" 
-			src="https://www.youtube.com/embed/qYY2CUxzgE4?controls=0&autoplay=1&muted=1" 
+			src="https://www.youtube.com/embed/qYY2CUxzgE4?controls=0&autoplay=1&muted=1&modestbranded=1" 
 			frameborder="0" 
 			allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
 			allowfullscreen>
