--- a/index.html
+++ b/index.html
@@ -101,22 +101,11 @@
 				</div>
 			</div>
 		</div>
-
-		<iframe 
-			class="window"
-			id="nowPlayingVideo"
-			width="720" 
-			height="405" 
-			src="https://www.youtube.com/embed/qYY2CUxzgE4?controls=0&autoplay=1&muted=1&modestbranded=1" 
-			frameborder="0" 
-			allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
-			allowfullscreen>
-		</iframe>
 		
-		<!-- <video autoplay muted loop width="720" class="window" id="nowPlayingVideo">
-			<source src="img/ffxiv-gameplay.mp4" type="video/mp4">
+		<video autoplay muted loop width="720" class="window" id="nowPlayingVideo">
+			<!-- <source src="img/ffxiv-gameplay.mp4" type="video/mp4"> -->
 			<source src="img/brokchrd.webm" type="video/webm">				
-		</video> -->
+		</video>
 
 		<div class="window humble"></div>
 	</div>
