--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="textRight">
 					Be right back!<br>
 					<br>
-					I'm playing Fallout New Vegas.<br>
+					I'm playing video games?<br>
 					<br>
 					Tell your friends to tune in at<br>
 					VideoGamesAreAwful.com<br>
@@ -103,8 +103,8 @@
 		</div>
 		
 		<video autoplay muted loop width="720" class="window" id="nowPlayingVideo">
-			<source src="img/fallout-gameplay.mp4" type="video/mp4">
-			<!-- <source src="img/brokchrd.webm" type="video/webm">				 -->
+			<!-- <source src="img/fallout-gameplay.mp4" type="video/mp4"> -->
+			<source src="img/brokchrd.webm" type="video/webm">				
 		</video>
 
 		<div class="window humble"></div>
