--- a/slideshow.html
+++ b/slideshow.html
@@ -18,7 +18,7 @@
 			</div>
 		</div>
 
-		<img src="img/sub-badges-1y-36px.png" class="slideLogo">
+		<img src="img/sub-badges-1y-36px.png" height="36" class="slideLogo">
 	</div>
 
 	<div id="alertCanvas" class="mySlides">
@@ -28,7 +28,7 @@
 			</div>
 		</div>
 
-		<img src="img/sub-badges-1y-36px.png" class="slideLogo">
+		<img src="img/sub-badges-1y-36px.png" height="36" class="slideLogo">
 	</div>
 
 	<script>
