--- a/webcam.html
+++ b/webcam.html
@@ -14,7 +14,7 @@
 <body>
 	<div id="webcamCanvas">
 		<div class="webcamText mySlides"><i class="faStyle faName fas fa-pizza-slice"></i> Michael</div>
-		<div class="webcamText mySlides"><i class="faStyle faGender fas fa-user"></i> he/him</div>
+		<div class="webcamText mySlides"><i class="faStyle faGender fas fa-user"></i> He/Him</div>
 		<div class="webcamText mySlides"><i class="faStyle faTwitter fab fa-twitter"></i> @mikeHEARTu</div>
 		<div class="webcamText mySlides"><i class="faStyle faTwitch fab fa-twitch"></i> /aznmike</div>
 	</div>
